--- a/order-dev.yml
+++ b/order-dev.yml
@@ -10,3 +10,4 @@ eureka:
       defaultZone:  http://eurekaserver1:8000/eureka
   instance:
     instance-id: ${spring.application.name}:${server.port}
+env: dev
