--- a/order-dev.yml
+++ b/order-dev.yml
@@ -18,4 +18,4 @@ eureka:
       defaultZone:  http://eurekaserver1:8000/eureka
   instance:
     instance-id: ${spring.application.name}:${server.port}
-env: dev
+env: dev1
